# fx-audit-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/fx_audit_mcp/: __init__.py  browser_evaluator.py  bugzilla.py  build_firefox.py  build_nss.py  js_shell_evaluator.py  mcp_server.py  models.py  nss_gtest_evaluator.py
src/fx_audit_mcp/ignored_signatures/: shutdown_hang_abort.json
tests/: conftest.py  test_browser_evaluator.py  test_bugzilla.py  test_build_firefox.py  test_build_nss.py  test_js_shell_evaluator.py  test_mcp_server.py  test_nss_gtest_evaluator.py
