[project]
name = "fx-audit-mcp"
version = "1.0.1"
description = "Firefox security audit MCP tools"
readme = "README.md"
requires-python = ">=3.12"
license = "MPL-2.0"
authors = [
    {name = "Jesse Schwartzentruber", email = "jschwartzentruber@mozilla.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=3.0.0",
    "fuzzmanager>=0.9.1",
    "grizzly-framework>=1.0.0",
    "prefpicker>=2.22.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "anyio>=4.0.0",
    "mypy>=1.0.0",
    "pre-commit>=4.0.0",
    "pylint>=3.3.0",
    "pylint-pydantic>=0.3.0",
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.0.0",
    "python-semantic-release>=9.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
fx-audit-mcp = "fx_audit_mcp.mcp_server:main"
fx-audit-build-firefox = "fx_audit_mcp.build_firefox:main"

[project.urls]
Homepage = "https://github.com/mozilla/fx-audit-mcp"
Repository = "https://github.com/mozilla/fx-audit-mcp"
Issues = "https://github.com/mozilla/fx-audit-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fx_audit_mcp"]

[tool.coverage.run]
source = ["fx_audit_mcp"]
omit = [
    "*/setup.py",
    "*/__main__.py",
    "*/test_*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_decorators = false
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["FTB.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
log_level = "DEBUG"
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = ["integration: tests that make live API calls (slow)"]

[tool.ruff]
fix = true
target-version = "py312"

[tool.ruff.lint]
select = [
    # flake8-builtins
    "A",
    # flake8-unused-arguments
    "ARG",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # Flynt
    "FLY",
    # refurb
    "FURB",
    # flake8-logging-format
    "G",
    # isort
    "I",
    # flake8-logging
    "LOG",
    # pep8-naming
    "N",
    # Perflint
    "PERF",
    # flake8-use-pathlib
    "PTH",
    # flake8-quotes
    "Q",
    # flake8-return
    "RET",
    # Ruff-specific rules
    "RUF",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TC",
    # pyupgrade
    "UP",
    # pycodestyle
    "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG001", "S101"]

[tool.pylint.main]
py-version = "3.12"
jobs = 0
recursive = true
ignore-paths = ["^\\.tox/.*$", "^\\.venv/.*$"]
load-plugins = ["pylint_pydantic"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.imports]
known-third-party = ["pydantic"]

[tool.pylint.typecheck]
ignored-modules = ["pytest"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-instance-attributes",
    "too-many-public-methods",
    "too-few-public-methods",
    "too-many-return-statements",
    "too-many-boolean-expressions",
    "too-many-lines",
    "fixme",
    "duplicate-code",
    "broad-exception-caught",
    "invalid-name",
    "subprocess-run-check",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "uv lock && git add uv.lock && uv build"
major_on_zero = false
